# wagtail-app-nest

./: .editorconfig  .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  dev.Dockerfile  dev.postgres.Dockerfile  docker-compose.postgres.yml  docker-compose.yml  pyproject.toml
app/app/: api.py  context.py  urls.py
app/app/settings/: base.py  dev.py  dev_postgres.py
app/app/templates/: 404.html  base.html
app/app/templates/partials/: _footer.html  _header.html  _navbar.html
app/app/templates/wagtailadmin/: admin_base.html  base.html  home.html  lockout.html  (+1 more)
app/flexiblepages/: apps.py  blocks.py  fields.py  models.py
app/flexiblepages/migrations/: 0001_initial.py
app/home/: models.py
app/home/migrations/: 0003_homepage_description_homepage_excerpt_homepage_image_and_more.py
app/menus/: abstracts.py  blocks.py  fields.py  helpers.py  models.py  panels.py  serializers.py  views.py  wagtail_hooks.py
app/menus/migrations/: 0001_initial.py
app/menus/templatetags/: menu_tags.py
app/nest/: abstracts.py  apps.py  blocks.py  fields.py  helpers.py  mixins.py  models.py  serializers.py  views.py
app/nest/api/: helpers.py
app/nest/migrations/: 0001_initial.py
app/nest/templatetags/: nestcore_tags.py  pagination_tags.py
app/search/: views.py
app/users/: models.py
app/users/migrations/: 0001_initial.py
frontend/: dev.Dockerfile  eslint.config.js  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: main.ts
frontend/src/css/: tailwind.css
frontend/src/scss/: main.scss
frontend/src/vuejs/: app.ts
(+73 files in other folders)
